--- a/1.3/Jenkinsfile
+++ b/1.3/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
                         echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}..."
                     }
                 }
-                stage('linux-arm64') {
+                stage('linux-amd64') {
                     steps {
                         echo "Building release ${RELEASE} for ${STAGE_NAME} with log level ${LOG_LEVEL}..."
                     }
