--- a/1.2/Jenkinsfile
+++ b/1.2/Jenkinsfile
@@ -15,8 +15,25 @@ pipeline {
             }
          stage('Test') {
              steps {
-                echo "Testing. I can see release ${RELEASE}, but not log level ${LOG_LEVEL}"
+                echo "Testing. I can see release ${RELEASE}"
                 }
             }
+         stage('Deploy') {
+            input {
+              message 'Deploy?'
+              ok 'Do it!'
+                parameters {
+                  string(name: 'TARGET_ENVIRONMENT', defaultValue: 'PROD', discription: 'Target deployment environment')
+                }
+            }
+            steps {
+                echo "Deploying release ${REEASE} to environment ${TARGET_ENVIRONMENT}"
+            }
         }
+    }
+    post {
+        always {
+            echo "print whether deploy happened or not, success or failure"
+        }
+    }
 }
