--- a/1.3/Jenkinsfile
+++ b/1.3/Jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
                 }
             }
             steps {
-                echo "Deploying release ${REEASE} to environment ${TARGET_ENVIRONMENT}"
+                echo "Deploying release ${RELEASE} to environment ${TARGET_ENVIRONMENT}"
             }
         }
     }
