--- a/1.5/Jenkinsfile
+++ b/1.5/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
                 }
              steps {
                 echo "Building release ${RELEASE} with log level ${LOG_LEVEL}..."
-                withCredentials( [usernamePassword( credentialsId: 'slack-token', passwordVariable: 'PASSWORD')]) {
+                 withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId:'slack-token', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
                    echo "All good"
                 }
                 }
