--- a/1.2/Jenkinsfile
+++ b/1.2/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
                LOG_LEVEL='INFO'
                 }
              steps {
-                echo "Building release ${RELEASE} with log leve ${LOG_LEVEL}..."
+                echo "Building release ${RELEASE} with log level ${LOG_LEVEL}..."
                 }
             }
          stage('Test') {
