--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -1,21 +1,42 @@
 pipeline {
   environment {
-    registry = "apurvisri/my_images123"
-    registryCredential = 'dockerhub'
+    imagename = "apurvisri/my_images123"
+    registryCredential = 'apurvisri'
+    dockerImage = ''
   }
   agent any
   stages {
     stage('Cloning Git') {
       steps {
-        git 'https://github.com/apurvisri/Docker.git'
+        git([url: 'https://github.com/apurvisri/Docker.git', branch: 'master'])
+
       }
     }
     stage('Building image') {
       steps{
         script {
-          docker.build registry + ":$BUILD_NUMBER"
+          dockerImage = docker.build my_images123
         }
+      }
+    }
+    stage('Deploy Image') {
+      steps{
+        script {
+          docker.withRegistry( '', registryCredential ) {
+            dockerImage.push("$BUILD_NUMBER")
+             dockerImage.push('latest')
+
+          }
+        }
+      }
+    }
+    stage('Remove Unused docker image') {
+      steps{
+        sh "docker rmi $imagename:$BUILD_NUMBER"
+         sh "docker rmi $imagename:latest"
+
       }
     }
   }
 }
+
