--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Cloning Git') {
       steps {
-        git([url: 'https://github.com/apurvisri/Docker.git', branch: 'master'])
+        git([url: 'https://github.com/apurvisri/Docker.git', branch: 'master', credentialsId: dockerhub])
 
       }
     }
