--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -1,42 +1,22 @@
 pipeline {
   environment {
-    imagename = "apurvisri/my_images123"
-    registryCredential = 'apurvisri'
-    dockerImage = ''
+    registry = "apurvisri/my_images123"
+    registryCredential = 'dockerhub'
   }
   agent any
   stages {
     stage('Cloning Git') {
       steps {
-        git([url: 'https://github.com/apurvisri/Docker.git', branch: 'master', credentialsId: dockerhub])
-
+        git 'https://github.com/apurvisri/Docker.git'
       }
     }
-    stage('Building Image') {
+    stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build my_images123
+          dockerImage = docker.build registry + ":$BUILD_NUMBER"
         }
-      }
-    }
-    stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push("$BUILD_NUMBER")
-             dockerImage.push('latest')
-
-          }
-        }
-      }
-    }
-    stage('Remove Unused docker image') {
-      steps{
-        sh "docker rmi $imagename:$BUILD_NUMBER"
-         sh "docker rmi $imagename:latest"
-
       }
     }
   }
 }
-
+  
