--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
   environment {
     registry = "apurvisri/my_images123"
     registryCredential = 'dockerhub'
+    dockerImage = ''
   }
   agent any
   stages {
@@ -15,6 +16,20 @@ pipeline {
         script {
           dockerImage = docker.build registry + ":$BUILD_NUMBER"
         }
+      }
+    }
+     stage('Deploy Image') {
+      steps{
+        script {
+          docker.withRegistry( '', registryCredential ) {
+            dockerImage.push()
+          }
+        }
+      }
+    }
+     stage('Remove Unused docker image') {
+      steps{
+        sh "docker rmi $registry:$BUILD_NUMBER"
       }
     }
   }
