--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
   stages {
     stage('Cloning Git') {
       steps {
-        git 'https://gitlab.com/scOpenEvaluation/devops-task.git'
+        git 'https://github.com/apurvisri/Docker.git'
       }
     }
     stage('Building image') {
