--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
     stage('Cloning Git') {
       steps {
         git 'https://gitlab.com/scOpenEvaluation/devops-task.git'
+        git 'https://github.com/apurvisri/Jenkins.git'
       }
     }
     stage('Building image') {
