--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build myimage + ":$BUILD_NUMBER" 
+          dockerImage = docker.build registory + ":$BUILD_NUMBER" 
         }
       }
     }
