--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -1,9 +1,4 @@
 pipeline {
-  environment {
-    registry = "apurvisri/my_images123"
-    registryCredential = 'dockerhub'
-    dockerImage = ''
-  }
   agent any
   stages {
     stage('Cloning Git') {
@@ -14,16 +9,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build registry + ":$BUILD_NUMBER" 
-        }
-      }
-    }
-     stage('Deploy Image') {
-      steps{
-        script {
-          docker.withRegistry( '', registryCredential ) {
-            dockerImage.push()
-          }
+          dockerImage = docker.build myimage + ":$BUILD_NUMBER" 
         }
       }
     }
