--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build myimage + ":$BUILD_NUMBER" 
+          dockerImage = docker.build "myimage" 
         }
       }
     }
