--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -15,8 +15,10 @@ pipeline {
     }
     stage('Docker push'){
       steps{
+         script { 
           docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', 'ecr:ap-south-1:apurvisri’) 
           docker.image('myimage').push('latest')
+                }
             }
         }
     }
