--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -13,16 +13,16 @@ pipeline {
         }
       }
     }
-    stage('Docker push'){
+    stage('Deploy Image') {
       steps{
-         script { 
-          docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', 'ecr:ap-south-1:apurvisri’) 
-          {
-          docker.image('myimage').push('latest')
-          }
-                }
-            }
-        }
+        script {
+            docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', 'ecr:ap-south-1:apurvisri')) {
+            dockerImage.push("$BUILD_NUMBER")
+            dockerImage.push('latest')
+}
+}
+}
+}
     }
   }
   
