--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -25,8 +25,8 @@ pipeline {
     }
    stage('Remove Unused docker image') {
       steps{
-            sh "docker rmi $dockerImage:$BUILD_NUMBER"
-            sh "docker rmi $dockerImage:latest"
+            sh "docker rmi dockerImage:$BUILD_NUMBER"
+            sh "docker rmi dockerImage:latest"
       }
     }
   }
