--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -1,4 +1,9 @@
 pipeline {
+  environment {
+    imagename = "mydockerimage"
+    registryCredential = 'ecr:ap-south-1:apurvisri'
+    dockerImage = ''
+  }
   agent any
   stages {
     stage('Cloning Git') {
@@ -9,24 +14,18 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build "mydockerimage" + ":$BUILD_NUMBER"
+          dockerImage = docker.build "imagename" + ":$BUILD_NUMBER"
         }
       }
     }
     stage('Deploy Image') {
       steps{
         script {
-            docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', 'ecr:ap-south-1:apurvisri') {
+            docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', 'registryCredential') {
             dockerImage.push("$BUILD_NUMBER")
             dockerImage.push('latest')
           }
         }
-      }
-    }
-   stage('Remove Unused docker image') {
-      steps{
-            sh "docker rmi dockerImage:$BUILD_NUMBER"
-            sh "docker rmi dockerImage:latest"
       }
     }
   }
