--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -28,6 +28,12 @@ pipeline {
         }
       }
     }
+    stage('Remove Unused docker image') {
+      steps{
+          sh "docker rmi $imagename:$BUILD_NUMBER"
+          sh "docker rmi $imagename:latest"
+      }
+    }
   }
 }
   
