--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -30,8 +30,8 @@ pipeline {
     }
     stage('Remove Unused docker image') {
       steps{
-          sh "docker rmi $imagename:$BUILD_NUMBER"
-          sh "docker rmi $imagename:latest"
+          sh "docker rmi 514836819662.dkr.ecr.ap-south-1.amazonaws.com/$imagename:$BUILD_NUMBER"
+          sh "docker rmi 514836819662.dkr.ecr.ap-south-1.amazonaws.com/$imagename:latest"
       }
     }
   }
