--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
     stage('Deploy Image') {
       steps{
         script {
-            docker.withRegistry('https://*.dkr.ecr.ap-south-1.amazonaws.com', registryCredential) {
+            docker.withRegistry('https://514836819662.dkr.ecr.ap-south-1.amazonaws.com', registryCredential) {
             dockerImage.push("$BUILD_NUMBER")
           }
         }
@@ -30,7 +30,7 @@ pipeline {
     stage('Remove Unused docker image') {
       steps{
             sh "docker rmi -f $imagename:$BUILD_NUMBER"
-            sh "docker rmi -f *.dkr.ecr.ap-south-1.amazonaws.com/$imagename:$BUILD_NUMBER"
+            sh "docker rmi -f 514836819662.dkr.ecr.ap-south-1.amazonaws.com/$imagename:$BUILD_NUMBER"
       }
     }
   }
