--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = ./app1/docker.build imagename + ":$BUILD_NUMBER"
+          dockerImage = docker.build imagename + ":$BUILD_NUMBER"
         }
       }
     }
