--- a/Smallcase_Jenkins/Jenkinsfile
+++ b/Smallcase_Jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
     stage('Building image') {
       steps{
         script {
-          dockerImage = docker.build("app1/imagename:${BUILD_NUMBER}")
+          dockerImage = docker.build imagename ":$BUILD_NUMBER"
         }
       }
     }
